feat: add new default tcp port parameter and generate openssl command for tcp proxy api connection